ABPL-code/programming_language/language_grammar.txt
# Copyright (c) 2025 Kemar Christie & Roberto James
# Authors: Kemar Christie & Roberto James

// Grammar for Neural-Booker Booking Language (ABPL)


COMMAND  -> LIST_COMMAND
            | BOOKING_COMMAND
            | CONFIRM_COMMAND
            | CANCEL_COMMAND
            | PAYMENT_COMMAND
            | INQUIRY_COMMAND
            | RENT_COMMAND
            | DECISION_COMMAND
            | MONEY_COMMAND


LIST_COMMAND  ->    LIST_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                    | LIST_KEYWORD CONTEXT_KEYWORD RENT_KEYWORD RESOURCE LOCATION_MARKER LOCATION SYMBOL
                    | LIST_KEYWORD SERVICE CONTEXT_KEYWORD SYMBOL
                    | LIST_KEYWORD SERVICE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                    | LIST_KEYWORD RESOURCE CONTEXT_KEYWORD SYMBOL
                    | LIST_KEYWORD CONTEXT_KEYWORD USERNAME SYMBOL
                    | LIST_KEYWORD SERVICE CONTEXT_KEYWORD LOCATION_MARKER LOCATION SYMBOL
                    | LIST_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
                    | LIST_KEYWORD RESOURCE CONTEXT_KEYWORD USERNAME SYMBOL
                    | LIST_KEYWORD RESOURCE LOCATION_MARKER LOCATION SYMBOL
                    | LIST_KEYWORD RESOURCE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER END_DATE SYMBOL
                    | LIST_KEYWORD RESOURCE SYMBOL

             
BOOKING_COMMAND ->     ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER LOCATION LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD NUMBER RESOURCE CONTEXT_KEYWORD RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER LOCATION CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD TICKET_TYPE RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD SERVICE SYMBOL
                       | ACTION_KEYWORD TICKET_TYPE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD NUMBER RESOURCE CONTEXT_KEYWORD SERVICE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL LOCATION_MARKER TIME SYMBOL


CONFIRM_COMMAND     ->  CONFIRM_KEYWORD SERVICE ACTION_KEYWORD CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD SERVICE ACTION_KEYWORD SYMBOL
                        | CONFIRM_KEYWORD NUMBER RESOURCE CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD ACTION_KEYWORD CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD RESOURCE CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD SERVICE RESOURCE CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD TICKET_TYPE RESOURCE CONTEXT_KEYWORD USERNAME SYMBOL
                        | CONFIRM_KEYWORD ACTION_KEYWORD CONTEXT_KEYWORD USERNAME CONTEXT_KEYWORD MONEY SYMBOL


CANCEL_COMMAND    ->  CANCEL_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                      | CANCEL_KEYWORD SERVICE ACTION_KEYWORD CONTEXT_KEYWORD USERNAME SYMBOL
                      | CANCEL_KEYWORD ACTION_KEYWORD NUMBER SYMBOL


PAYMENT_COMMAND   ->   ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
                       | PAYMENT_TYPE SYMBOL
                       | ACTION_KEYWORD MONEY CONTEXT_KEYWORD ACTION_KEYWORD NUMBER SYMBOL


INQUIRY_COMMAND  ->    INQUIRY_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                        | INQUIRY_KEYWORD CONTEXT_KEYWORD CONTEXT_KEYWORD SERVICE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
                        | INQUIRY_KEYWORD CONTEXT_KEYWORD CONTEXT_KEYWORD SERVICE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL


RENT_COMMAND    ->   RENT_KEYWORD RESOURCE LOCATION_MARKER LOCATION LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL


DECISION_COMMAND    ->   DECISION_KEYWORD SYMBOL


MONEY_COMMAND     ->    MONEY SYMBOL


ACTION_KEYWORD        →  'Book a'| 'Confirm a'| 'Pay'| 'Cancel a'| 'Reserve a'| 'How many'| 'Duration of'
CONTEXT_KEYWORD       →   'on'| 'For'| 'Schedule'| 'are there'| 'Returning'| 'cost' | 'available'
RENT_KEYWORD          →   'Rent a' | 'Rent' | 'Rental' 
LOCATION_MARKER       →   'in'| 'at'| 'from'| 'to'
CONNECTIVE_WORD       →   'that'
ARTICLE_CONJUNCTION   →   'a' | 'and'
PAYMENT_TYPE          →   'credit card' |'debit card' | 'bank transfer'
RESOURCE    	      →   'Reservations' | 'Reservation' | 'Tickets' | 'Ticket' | 'tickets' | 'Flights' | 'Flight' | 'Rooms' | 'Room' | 'Hotels' | 'Hotel'
CONDITIONS            →   'less than' | 'more than' | 'equal to' | 'greater than' | 'if' | 'then'
DATE                  →   'Jan' NUMBER, NUMBER | 'Feb' NUMBER, NUMBER | 'Mar' NUMBER, NUMBER | 'Apr' NUMBER, NUMBER | 'May' NUMBER, NUMBER | 'Jun' NUMBER, NUMBER | 'Jul' NUMBER, NUMBER | 'Aug' NUMBER, NUMBER | 'Sep' NUMBER, NUMBER | 'Oct' NUMBER, NUMBER | 'Nov' NUMBER, NUMBER | 'Dec' NUMBER, NUMBER 
START_DATE            →    DATE
PAYMENT               →    'credit card' | 'debit card’ | 'bank transfer’
CONFIRM_KEYWORD       →    'Confirm a’ | 'Confirm the’ | 'Confirm’
INQUIRY_KEYWORD       →    'How many’ | 'What is the’
PASSENGER_TYPE        →    'adults’ | 'children’ | 'seniors’ | 'students’ | 'adult’ | 'child’ | 'senior’ | 'student’
END_DATE              →    DATE
TIME                  →    NUMBER:NUMBER 'AM' | NUMBER:NUMBER 'PM' | NUMBER:NUMBER
NUMBER                →    0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
MONEY                 →    '$' NUMBER | '$' NUMBER.NUMBER
USERNAME              →    CHAR CHAR CHAR'_'CHAR CHAR CHAR
CHAR                  →    'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'g' | 'h' | 'i' | 'j' | 'k' | 'l' | 'm' | 'n' | 'o' | 'p' | 'q' | 'r' | 's' | 't' | 'u' | 'v' | 'w' | 'x' | 'y' | 'z'
SYMBOL                →    '.' | '?'
