ABPL-code/programming_language/parser.py
# Copyright (c) 2025 Kemar Christie & Roberto James
# Authors: Kemar Christie & Roberto James

from ply.yacc import yacc
from lexer import tokens  # Import the token list from lexer.py

#semanrtic validation functions

# only accept date in either format March 10, 2025 or Mar 10, 2025
from datetime import datetime
import re

def valid_date_format(date_str):
    """
    Validates the format and correctness of the date string.
    Accepts formats like 'March 10, 2025' or 'Mar 10, 2025'.
    Rejects invalid dates (e.g., 'Feb 31, 2025').
    """
    # Remove leading/trailing whitespace
    date_str = date_str.strip()

    # Regular expression for full month name format
    fulldate_regex = r"^(January|February|March|April|May|June|July|August|September|October|November|December) \d{1,2}, \d{4}$"

    # Regular expression for abbreviated month name format
    abbrdate_regex = r"^(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec) \d{1,2}, \d{4}$"

    # Check format validity with regex
    if not re.match(fulldate_regex, date_str, re.IGNORECASE) and not re.match(abbrdate_regex, date_str, re.IGNORECASE):
        print(f"\nError: Invalid date format '{date_str}'. Expected format: 'Mar 10, 2025' or 'March 10, 2025'.")
        return False

    # Check for date correctness using datetime module
    try:
        # Normalize the format to 'Month Day, Year'
        normalized_date = datetime.strptime(date_str, "%B %d, %Y")
        return True
    except ValueError:
        try:
            # Attempt parsing with abbreviated format
            normalized_date = datetime.strptime(date_str, "%b %d, %Y")
            return True
        except ValueError:
            print(f"\nError: Invalid date '{date_str}'. This date does not exist.")
            return False
        

def valid_time_format(time_str):
        import re

        # Regular expression to validate the time format
        time_regex = r"^(1[0-2]|0?[1-9]):[0-5][0-9] ?[APap][Mm]$|^(2[0-3]|1[0-9]|0?[0-9]):[0-5][0-9]$"
        time_str=time_str.strip()  # Remove leading/trailing whitespace
        if re.match(time_regex, time_str):
            return True
        else:
            print(f"\nError: Invalid time '{time_str}'. Expected formats: '10:30 AM' or '19:30'.")
            return False


def validate_date_order(start_date, end_date):
    
    from datetime import datetime

    try:
        # Define possible formats for parsing the dates
        formats = ["%B %d, %Y", "%b %d, %Y"]

        # Attempt to parse the start and end dates
        for fmt in formats:
            try:
                start = datetime.strptime(start_date, fmt)
                end = datetime.strptime(end_date, fmt)
                break
            except ValueError:
                continue
        else:
            # Raise an error if parsing fails for both formats
            raise ValueError("Dates must be in the format 'March 10, 2025' or 'Mar 10, 2025'.")

        # Check if the start date is earlier than the end date
        if start < end:
            return True  # Valid order
        else:
            print(f"Error: Start date '{start_date}' is not earlier than end date '{end_date}'.")
            return False  # Invalid order
    except Exception as e:
        print(f"Error: {e}")
        return False


# Parser rules with unique names to avoid conflicts with token names

#username should have 3 letters, then a underscore, 3 letters again then any amount of numbers at the end
def validUsernameFromat(username):
    import re
    # Regular expression to validate the username format
    username_regex = r"^[a-zA-Z]{3}_[a-zA-Z]{3}\d+$"
    if re.match(username_regex, username):
        return True
    else:
        print(f"\nError: Invalid username '{username}'. Expected format: 'abc_def123'.")
        return False


def p_command(p):
    '''COMMAND : booking_command
               | list_command
               | payment_command
               | inquiry_command
               | rent_command
               | cancel_command
               | confirm_command
               | decision_command
               | money_command'''

    # Recursive function for semantic validation
    def validate(node):
        # Helper variables to store start and end dates
        start_date = None
        end_date = None

        if isinstance(node, tuple):  # If the node is a tuple, traverse it
            for element in node:  # Iterate through tokens
                # Identify if a token is a start or end date
                if isinstance(element, tuple) and element[0] == "START_DATE":
                    start_date = element[1]  # Extract the start date string
                    if not valid_date_format(start_date):  # Validate the date format
                        return False
                if isinstance(element, tuple) and element[0] == "END_DATE":
                    end_date = element[1]  # Extract the end date string
                    if not valid_date_format(end_date):  # Validate the date format
                        return False
                if isinstance(element, tuple) and element[0] == "TIME":  # Validate time tokens
                    time_str = element[1]
                    if not valid_time_format(time_str):
                        return False
                elif isinstance(element, tuple):  # Recur for nested tuples
                    if not validate(element):
                        return False
                #semantic validation for username
                if isinstance(element, tuple) and element[0] == "USERNAME":
                    username = element[1]
                    if not validUsernameFromat(username):
                        return False

            # Call validate_date_order if both start_date and end_date are available
            if start_date and end_date:
                if not validate_date_order(start_date, end_date):
                    return False

        return True  # All validations passed

    # Perform semantic validation on the parsed structure
    if not validate(p[1]):  # Validate nested structures
        return  # Stop further processing on validation failure

    # If all validations pass, set the parsed result
    p[0] = ('COMMAND', p[1])


def p_booking_command(p):
    '''booking_command : ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER LOCATION LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
                       | ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD NUMBER RESOURCE CONTEXT_KEYWORD RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER LOCATION CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD TICKET_TYPE RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD SERVICE SYMBOL
                       | ACTION_KEYWORD TICKET_TYPE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD NUMBER PASSENGER_TYPE SYMBOL
                       | ACTION_KEYWORD NUMBER RESOURCE CONTEXT_KEYWORD SERVICE SYMBOL
                       | ACTION_KEYWORD NUMBER TICKET_TYPE RESOURCE CONTEXT_KEYWORD DATE SYMBOL
                       | ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL LOCATION_MARKER TIME SYMBOL'''

    if len(p)== 8 and p.slice[6].type =="ARRIVAL" : # Variant 1.1:
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
        ('DEPARTURE', p[4]), ('LOCATION_MARKER', p[5]), ('ARRIVAL', p[6]), ('SYMBOL', p[7]))
    
    elif len(p) == 8 and p.slice[4].type == "ARRIVAL":  # Variant 1: Booking with ARRIVAL, DEPARTURE, and SYMBOL
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('ARRIVAL', p[4]), ('LOCATION_MARKER', p[5]), ('DEPARTURE', p[6]), ('SYMBOL', p[7]))
    
    elif len(p) == 12 and p.slice[11].type == "MONEY":  # Variant 2: Booking with CONNECTIVE_WORD, CONTEXT_KEYWORD, CONDITIONS, and MONEY
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('ARRIVAL', p[4]), ('LOCATION_MARKER', p[5]), ('DEPARTURE', p[6]), ('CONNECTIVE_WORD', p[7]),
                ('CONTEXT_KEYWORD', p[8]), ('CONDITIONS', p[9]), ('MONEY', p[10]), ('SYMBOL', p[11]))
    
    elif len(p) == 15 and p.slice[11].type == "START_DATE":  # Variant 3: Booking with ARTICLE_CONJUNCTION and DATE elements
  
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('ARRIVAL', p[4]), ('LOCATION_MARKER', p[5]), ('DEPARTURE', p[6]), ('ARTICLE_CONJUNCTION', p[7]),
                ('ARTICLE_CONJUNCTION', p[8]), ('RESOURCE', p[9]), ('LOCATION_MARKER', p[10]),
                ('START_DATE', p[11]), ('LOCATION_MARKER', p[12]), ('END_DATE', p[13]), ('SYMBOL', p[14]))
    
    elif len(p) == 15 and p.slice[11].type == "TIME":  # Variant 4: Booking with SERVICE, DATE, TIME, and USERNAME elements

        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('SERVICE', p[2]), ('RESOURCE', p[3]),
                ('LOCATION_MARKER', p[4]), ('DEPARTURE', p[5]), ('LOCATION_MARKER', p[6]), ('ARRIVAL', p[7]),
                ('CONTEXT_KEYWORD', p[8]), ('START_DATE', p[9]), ('LOCATION_MARKER', p[10]), ('TIME', p[11]),
                ('CONTEXT_KEYWORD', p[12]), ('USERNAME', p[13]), ('SYMBOL', p[14]))
    
    elif len(p) == 17:  # Variant 5: Booking with DEPARTURE, ARRIVAL, DATES, and TIMES

        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('DEPARTURE', p[4]), ('LOCATION_MARKER', p[5]), ('ARRIVAL', p[6]), ('CONTEXT_KEYWORD', p[7]),
                ('START_DATE', p[8]), ('LOCATION_MARKER', p[9]), ('TIME', p[10]), ('CONTEXT_KEYWORD', p[11]),
                ('CONTEXT_KEYWORD', p[12]), ('END_DATE', p[13]), ('LOCATION_MARKER', p[14]), ('TIME', p[15]),
                ('SYMBOL', p[16]))
    
    elif len(p) == 11 and p.slice[8].type == "END_DATE":  # Variant 6: Booking a Room with START_DATE, END_DATE, and USERNAME
        
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('SERVICE', p[4]), ('LOCATION_MARKER', p[5]), ('START_DATE', p[6]), ('LOCATION_MARKER', p[7]),
                ('END_DATE', p[8]), ('CONTEXT_KEYWORD', p[9]), ('USERNAME', p[10]), ('SYMBOL', p[11]))
    
    elif len(p) == 11 and p.slice[4].type == "DEPARTURE": # New Variant
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('DEPARTURE', p[4]), ('CONTEXT_KEYWORD', p[5]), ('DATE', p[6]), ('ARRIVAL', p[7]),
                ('CONTEXT_KEYWORD', p[8]), ('DATE', p[9]), ('SYMBOL', p[10]))
    
    elif len(p) == 12 and p.slice[4].type == "LOCATION":
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('LOCATION', p[4]), ('LOCATION_MARKER', p[5]), ('START_DATE', p[6]), ('LOCATION_MARKER', p[7]),
                ('END_DATE', p[8]), ('CONTEXT_KEYWORD', p[9]), ('USERNAME', p[10]), ('SYMBOL', p[11]))
    
    elif len(p) == 16:
        p[0]= ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('SERVICE', p[2]), ('RESOURCE', p[3]),
               ('LOCATION_MARKER', p[4]), ('DEPARTURE', p[5]), ('LOCATION_MARKER', p[6]), ('ARRIVAL', p[7]),
                ('CONTEXT_KEYWORD', p[8]), ('START_DATE', p[9]), ('LOCATION_MARKER', p[10]), ('TIME', p[11]),
                ('CONTEXT_KEYWORD', p[12]), ('NUMBER', p[13]), ('PASSENGER_TYPE', p[14]), ('SYMBOL', p[15]))

    elif len(p) == 9 and p.slice[2].type == 'NUMBER':  
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('NUMBER', p[2]), ('RESOURCE', p[3]),
                ('CONTEXT_KEYWORD', p[4]), ('RESOURCE', p[5]), ('CONTEXT_KEYWORD', p[6]), ('DATE', p[7]), ('SYMBOL', p[8]))
    
    elif len(p) == 10:
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('NUMBER', p[2]), ('TICKET_TYPE', p[3]), ('RESOURCE', p[4]),
                ('CONTEXT_KEYWORD', p[5]), ('RESOURCE', p[6]), ('CONTEXT_KEYWORD', p[7]), ('DATE', p[8]), ('SYMBOL', p[9]))
    
    elif len(p) == 8 and p.slice[4].type == "DEPARTURE":  # Variant 7: Booking with DEPARTURE and END_DATE
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('LOCATION_MARKER', p[3]),
                ('DEPARTURE', p[4]), ('LOCATION_MARKER', p[5]), ('END_DATE', p[6]), ('SYMBOL', p[7]))
    
    elif len(p) == 9 :
        p[0] = ('BOOKING_COMMAND', ('ACTION_KEYWORD', p[1]), ('RESOURCE', p[2]), ('CONTEXT_KEYWORD', p[3]),
                ('LOCATION_MARKER', p[4]), ('DEPARTURE', p[5]), ('LOCATION_MARKER', p[6]), ('ARRIVAL', p[7]), ('SYMBOL', p[8]))
    
    elif len(p) == 8 and p.slice[4].type == "LOCATION":  # Variant 8: Booking with LOCATION and DATE
